<resources>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_edit_personal_information">EditPersonalInformation</string>
    <string name="profile_photo_desc">Profile photo</string>
    <string name="edit_info_btn">Edit Information</string>
    <string name="status_publish_btn">Publish</string>
    <string name="slot_for_status">Status goes here &#x2026;</string>
    <string name="event_title">Event Title</string>
    <string name="interest_in_map">Interest</string>
    <string name="max_num_user">Number of users can join</string>
    <string name="event_creation_hint">Create Event</string>
    <string name="add_workplace_to_profile">Share your workplace</string>
    <string name="submit_btn_interest_workplace">Submit</string>
    <string name="interest_in_profile">Share your interests</string>
    <string name="app_name">BuilDay</string>
    <string name="appName">BuilDay</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="logoImage">Logo</string>
    <string name="pick_event_date">Pick Event Date</string>
    <string name="pick_event_time">Pick Event Time</string>
    <string name="enter_your_interests">Enter your interests</string>
    <string name="chess_piano_soccer">Chess, Piano, Soccer...</string>
    <string name="describe_yourself">Describe yourself</string>
    <string name="submit_button">Submit</string>
    <string name="info_about_event">Info about event</string>
    <string name="creator_name">Creator</string>
    <string name="places_available">Places available</string>
    <string name="interest">Interest</string>
    <string name="title">Title</string>
    <string name="connect_button">Connect</string>
    <string name="account_logo">account_logo</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="cancel_button">Cancel</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="token">Token</string>
    <string name="email">Email</string>
    <string name="notification_button">notification_button</string>
    <string name="not_registered">Not registered?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="cover_image">cover_image</string>
    <string name="september">SEPTEMBER</string>
</resources>
