<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.agora.EditPersonalInfo">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:id="@+id/linearLayout"
        android:layout_marginRight="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintHorizontal_bias="0.0">

        <EditText
            android:id="@+id/enterYourInterests"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="53dp"
            android:ems="10"
            android:hint="@string/interest_in_profile"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/enterYourWorkPlace"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="280dp"
            android:ems="10"
            android:hint="@string/add_workplace_to_profile"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/bt_infosubmitbutton"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:onClick="submitInfo"
            android:text="@string/submit_btn_interest_workplace" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
